The App work Notification recive

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <permission
         android:name="com.citaurus.gmspps.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+    <permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-permission android:name="com.citaurus.gmspps.permission.C2D_MESSAGE" />
 
